// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots components/modals/ModalHeader Customized 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "paddingHorizontal": 30.76923076923077,
      },
      Object {
        "backgroundColor": "#ededed",
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "justifyContent": "center",
          "marginBottom": 37.93364928909953,
          "width": "100%",
        },
        Object {},
      ]
    }
    testID="modal-header-test-id"
  >
    <View
      style={
        Object {
          "left": 0,
          "position": "absolute",
          "top": 0,
        }
      }
    >
      <View
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID="icon-btn-test-id"
      >
        <View
          style={
            Array [
              Object {
                "alignContent": "center",
                "backgroundColor": "#FFFFFF",
                "borderRadius": 30.76923076923077,
                "height": 84.61538461538461,
                "justifyContent": "center",
                "width": 84.61538461538461,
              },
              Object {
                "height": 24,
              },
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "fontFamily": "mykross",
                  "textAlign": "center",
                },
                Object {
                  "color": "#333333",
                  "fontSize": 24,
                },
                undefined,
              ]
            }
            testID="icon-btn-test-id-icon"
          >
            X
          </Text>
        </View>
      </View>
    </View>
    <Text
      adjustsFontSizeToFit={false}
      numberOfLines={0}
      style={
        Array [
          Object {
            "color": "#333333",
            "fontFamily": "DIN2014-Demi",
            "fontSize": 20,
            "fontWeight": "600",
            "lineHeight": 24,
            "textAlign": "center",
          },
          undefined,
        ]
      }
      testID="modal-header-test-id-header"
    >
      
    </Text>
  </View>
</View>
`;

exports[`Storyshots components/modals/ModalHeader Default 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "paddingHorizontal": 30.76923076923077,
      },
      Object {
        "backgroundColor": "#ededed",
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "justifyContent": "center",
          "marginBottom": 37.93364928909953,
          "width": "100%",
        },
        undefined,
      ]
    }
    testID="modal-header-test-id"
  >
    <View
      style={
        Object {
          "left": 0,
          "position": "absolute",
          "top": 0,
        }
      }
    >
      <View
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID="icon-btn-test-id"
      >
        <View
          style={
            Array [
              Object {
                "alignContent": "center",
                "backgroundColor": "#FFFFFF",
                "borderRadius": 30.76923076923077,
                "height": 84.61538461538461,
                "justifyContent": "center",
                "width": 84.61538461538461,
              },
              Object {
                "height": 24,
              },
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "fontFamily": "mykross",
                  "textAlign": "center",
                },
                Object {
                  "color": "#333333",
                  "fontSize": 24,
                },
                undefined,
              ]
            }
            testID="icon-btn-test-id-icon"
          >
            X
          </Text>
        </View>
      </View>
    </View>
    <Text
      adjustsFontSizeToFit={false}
      numberOfLines={0}
      style={
        Array [
          Object {
            "color": "#333333",
            "fontFamily": "DIN2014-Demi",
            "fontSize": 20,
            "fontWeight": "600",
            "lineHeight": 24,
            "textAlign": "center",
          },
          undefined,
        ]
      }
      testID="modal-header-test-id-header"
    >
      Modal Header
    </Text>
  </View>
</View>
`;
